fix: align layout of topbar action button with other actions

--- a/src/app/remotes/avatar-image.component.scss
+++ b/src/app/remotes/avatar-image.component.scss
@@ -1,7 +1,7 @@
 :host {
   .user-avatar-image {
     border-radius: 50%;
-    width: 32px;
-    height: 32px;
+    width: 2.5rem;
+    height: 2.5rem;
   }
 }
